Configuring action mailer

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -2,3 +2,8 @@ development:
   secret_key_base: 1d7...fc1
   mail_username: noreplyibdb@gmail.com
   mail_password: password123Abr
+  frontend_url: "localhost:3000"
+
+production:
+  mail_username: noreplyibdb@gmail.com
+  mail_password: password123Abr
