--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /.bundle
 
 # Ignore the default SQLite database.
-
+export GOOGLE_CLIENT_ID=YOUR_ID
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -23,6 +23,8 @@ storage/
 20200211062928
 /node_modules
 /yarn-error.log
+
+.env*
 
 /public/assets
 .byebug_history
